--- a/icarus.html
+++ b/icarus.html
@@ -172,7 +172,7 @@
 											  </div>
 											</body>
 										  </html><br><br>
-										  <p> With the first iteration complete, the next step is to conduct a usability study that focuses on the main features of the app. There will be a high priority on the top 5 features, with the alarm clock feature being fully showcased to users in real-time. Once this is completed, the second iteration can be utilized to make adjustments to the original functions and design. The final phase should conclude with A/B testing, 
+										  <p> With the first iteration complete, the next step is to conduct a usability study that focuses on the main features of the app. There will be a high priority on the top 5 features, with the alarm clock feature being fully showcased to users in real-time. Once this is completed, the second iteration can be utilized to make adjustments to the original functions and design. The final phase should conclude with comparative testing, 
 											as I can now concentrate heavily on design since the features have been confirmed. </p>
 											 
 											 <h1>Key Takeaways</h1>
