--- a/icarus.html
+++ b/icarus.html
@@ -178,6 +178,8 @@
 											 <h1>Key Takeaways</h1>
 											<p> Before starting this program, I aspired to create a dream app but lacked a background in design or UX. I plunged into deep readings, dived headfirst into designing, and blindly added features without knowledge of app development, UI/UX heuristics, and research. Now, having taken my first steps in app development – even attempting to use Xcode for development (which was a significant challenge) – the next steps are to 
 												figure out how to monetize the app. Following this, I plan to focus on adding illustrations to enhance the app's experience and use it to attract investors to help bring this app to fruition. </p>
+											<h1>In Depth Research Plan</h1>
+											<button onclick="window.open('https://drive.google.com/file/d/1GgNLYEMAJ5z6ps9CrvlRpvfXSMmqtWYW/view?usp=drive_link', '_blank')">Research Plan</button>								
 							</article>
 							</div>
 				<!-- Footer -->
