--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 								<div class="title">
 									<h2><a href="icarus.html">HBO MAX Case Study</a></h2>
 									<p>April 8, 2023</p>
-									<p> #Qualitative #Prototype #A/B Test #WireFrame #AffinityMap</p>
+									<p> #Qualitative #Prototype #Comparative Testing #WireFrame #AffinityMap</p>
 								</div>
 								<div class="meta">
 									<a href="#" class="author">
