--- a/icarus.html
+++ b/icarus.html
@@ -28,7 +28,7 @@
 							<header>
 							  <div class="title">
 								<h2><a href="#">Icarus The Dream App</a></h2>
-								<p>Icarus is a dream journal app that aims to build the world's largest dream database. The app aims to focus on indviduals seeking insights into their subconscious, health, and well-being.</p>
+								<p>Icarus is a dream journal app that aims to build the world's largest dream database. The app aims to focus on individuals seeking insights into their subconscious, health, and well-being.</p>
 							  </div>
 							  <div class="meta">
 								<a href="#" class="author">
